# shape-assessement

./: CMakeLists.txt
icons/: icons.qrc
src/: CMakeLists.txt  connectionmanager.cpp  connectionmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  shapecanvas.cpp  shapecanvas.h
src/shapes/: Shapes.h  ishape.cpp  ishape.h  ishapevisitor.h  sellipse.cpp  sellipse.h  shapetypededucer.cpp  shapetypededucer.h  sline.cpp  sline.h  srectangle.cpp  srectangle.h  striangle.cpp  striangle.h
